# fast_dp

./: .bumpversion.cfg  .git-notifier  .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  MANIFEST.in  README.MD  README.md  README.rst  pyproject.toml  readme.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/: azure-pipelines.yml  conda-forge-build.yml
.github/workflows/: python.yml
doc/: todo.txt
etc/: forkintegrate  forkxds
etc/legacy_forkintegrate/: forkintegrate  forkintegrate_array  forkintegrate_array_job  forkintegrate_job
etc/ssh/: forkxds
etc/uge_array/: forkxds  forkxds_job  readme.txt
fast_dp/: __init__.py  autoindex.py  cell_spacegroup.py  diff.py  fast_dp.py  fast_rdp.py  header2edna_xml.py  image_names.py  image_readers.py  integrate.py  logger.py  merge.py  output.py  pointgroup.py  pointless_reader.py  run_job.py  scale.py  test_some_tests.py  xds_reader.py  xds_writer.py
fast_dp/templates/: ADSC_4M_CORRECT.INP  ADSC_4M_INDEX.INP  ADSC_4M_INTEGRATE.INP  ADSC_CORRECT.INP  EDNA_HEADER_XML.INP  EIGER_16M_INDEX.INP  README.MD  (+16 more)
lib/: cell_spacegroup.py  image_names.py  image_readers.py  pointless_reader.py  run_job.py  xds_reader.py  xds_writer.py  xml_output.py
paper/: paper_prepare.doc  paper_som_dimple.doc  plotme.gnu  therm.cgm  thermolysin_1_1440.gplt
src/: autoindex.py  fast_dp.py  fast_rdp.py  header2edna_xml.py  integrate.py  logger.py  merge.py  pointgroup.py  scale.py  test_some_tests.py
test/: README.MD  test_cell_spacegroup.py  test_end_to_end.py  test_resource_access.py  test_some_tests.py
(+24 files in other folders)
